--- a/src/m/index.html
+++ b/src/m/index.html
@@ -88,9 +88,9 @@
 			</div>
 			<div class="section s1 ani">
 				<img src="./images/s1/banner.png" alt="" />
-				<div class="women-btn">
-					<a href="javascript:;">
-						<img src="./images/s1/btn-women.png" alt="" />
+				<div class="men-btn">
+					<a href="https://www.levi.com.tw/!!levis_demo02/2018fw_men_collection/m">
+						<img src="./images/s1/btn-men.png" alt="" />
 					</a>
 				</div>
 			</div>
