m propaganda position fixed

--- a/src/m/index.html
+++ b/src/m/index.html
@@ -33,9 +33,9 @@
 
 	<!-- START - Facebook Open Graph Tags -->
 	<meta property="og:url" content="http://levi.com.tw/2018fw_women_collection/">
-	<meta property="og:title" content="LEVI'S® 秋冬全新男裝 2 Way 丹寧潮搭">
+	<meta property="og:title" content="LEVI'S® 秋冬全新女裝 2 Way 丹寧潮搭">
 	<meta property="og:description" content="#摩登捲折 #窄腳積褲 錐形窄管 x IG大熱Logo衛衣">
-	<meta property="og:image" content="https://www.levi.com.tw/!!levis_demo02/2018fw_women_collection/images/fbShare.jpg">
+	<meta property="og:image" content="https://www.levi.com.tw/!!levis_demo02/2018fw_women_collection/images/fb_women.jpg">
 	<!-- END - Facebook Open Graph Tags -->
 
 	<script>
@@ -89,7 +89,7 @@
 			<div class="section s1 ani">
 				<img src="./images/s1/banner.png" alt="" />
 				<div class="men-btn">
-					<a href="https://www.levi.com.tw/!!levis_demo02/2018fw_men_collection/m">
+					<a target="_blank" href="https://www.levi.com.tw/!!levis_demo02/2018fw_men_collection/m">
 						<img src="./images/s1/btn-men.png" alt="" />
 					</a>
 				</div>
