--- a/src/m/index.html
+++ b/src/m/index.html
@@ -4,11 +4,11 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=640, user-scalable=no">
-	<meta name="title" content="LEVI'S® 秋冬全新男裝 2 Way 丹寧潮搭" />
+	<meta name="title" content="LEVI'S® 秋冬全新女裝 2 Way 丹寧潮搭" />
 	<meta name="description" content="#摩登捲折 #窄腳積褲 錐形窄管 x IG大熱Logo衛衣" />
 	<meta name="keywords" content="LEVIS,Taper,丹寧,穿搭,牛仔褲,窄管,AB褲,512,502" />
 	<link type="text/css" href="https://www.levi.com.tw/images/ico/icon.ico" rel="shortcut icon" />
-	<title>LEVI'S® 秋冬全新男裝 2 Way 丹寧潮搭</title>
+	<title>LEVI'S® 秋冬全新女裝 2 Way 丹寧潮搭</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.2.0/css/swiper.min.css">
 	<link rel="stylesheet" href="https://rawgit.com/utatti/perfect-scrollbar/master/css/perfect-scrollbar.css">
 	<link rel="stylesheet" href="/m/css/hamburgers.css">
@@ -35,7 +35,7 @@
 	<meta property="og:url" content="http://levi.com.tw/2018fw_women_collection/">
 	<meta property="og:title" content="LEVI'S® 秋冬全新女裝 2 Way 丹寧潮搭">
 	<meta property="og:description" content="#摩登捲折 #窄腳積褲 錐形窄管 x IG大熱Logo衛衣">
-	<meta property="og:image" content="https://www.levi.com.tw/!!levis_demo02/2018fw_women_collection/images/fb_women.jpg">
+	<meta property="og:image" content="https://www.levi.com.tw/!!levis_demo02/2018fw_women_collection/images/fb.jpg">
 	<!-- END - Facebook Open Graph Tags -->
 
 	<script>
@@ -101,7 +101,7 @@
 				<div class="cont ani">
 					<img src="./images/s2/pic.png" alt="" />
 					<div class="video">
-						<iframe width="326" height="204" src="https://www.youtube.com/embed/Qa08SPdaz0o?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+						<iframe width="326" height="204" src="https://www.youtube.com/embed/IfMvE1b9XGM?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 					</div>
 				</div>
 			</div>
@@ -112,7 +112,8 @@
 				<div class="cont ani">
 					<img src="./images/s3/pic.png" alt="" />
 					<div class="slider-btn">
-						<a href="javascript:;"></a>
+						<a target="_blank" href="https://www.levi.com.tw/fitguide.html#women
+						"></a>
 					</div>
 					<div class="roll-btn">
 						<a href="javascript:;"></a>
@@ -220,23 +221,6 @@
 					<a href="./images/book/12.jpg" data-fancybox="item1"></a>
 					<a href="./images/book/13.jpg" data-fancybox="item1"></a>
 					<a href="./images/book/14.jpg" data-fancybox="item1"></a>
-					<a href="./images/book/15.jpg" data-fancybox="item1"></a>
-					<a href="./images/book/16.jpg" data-fancybox="item1"></a>
-					<a href="./images/book/17.jpg" data-fancybox="item1"></a>
-					<a href="./images/book/18.jpg" data-fancybox="item1"></a>
-					<a href="./images/book/19.jpg" data-fancybox="item1"></a>
-					<a href="./images/book/20.jpg" data-fancybox="item1"></a>
-					<a href="./images/book/21.jpg" data-fancybox="item1"></a>
-					<a href="./images/book/22.jpg" data-fancybox="item1"></a>
-					<a href="./images/book/23.jpg" data-fancybox="item1"></a>
-					<a href="./images/book/24.jpg" data-fancybox="item1"></a>
-					<a href="./images/book/25.jpg" data-fancybox="item1"></a>
-					<a href="./images/book/26.jpg" data-fancybox="item1"></a>
-					<a href="./images/book/27.jpg" data-fancybox="item1"></a>
-					<a href="./images/book/28.jpg" data-fancybox="item1"></a>
-					<a href="./images/book/29.jpg" data-fancybox="item1"></a>
-					<a href="./images/book/30.jpg" data-fancybox="item1"></a>
-					<a href="./images/book/31.jpg" data-fancybox="item1"></a>
 				</div>
 			</div>
 			<div class="section s7">
