--- a/src/m/index.html
+++ b/src/m/index.html
@@ -81,7 +81,7 @@
 		<div class="container">
 			<div class="propaganda-box">
 				<div class="propaganda">
-					<a href="javascript:;">
+					<a target="_blank" href="http://bit.ly/2olwVSj">
 						<img src="./images/propaganda.png" alt="" />
 					</a>
 				</div>
@@ -101,7 +101,7 @@
 				<div class="cont ani">
 					<img src="./images/s2/pic.png" alt="" />
 					<div class="video">
-						<iframe width="326" height="204" src="https://www.youtube.com/embed/IfMvE1b9XGM?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+						<iframe width="326" height="204" src="https://www.youtube.com/embed/WUdzrj8W4P0?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 					</div>
 				</div>
 			</div>
@@ -258,6 +258,21 @@
 								</div>
 							</div>
 						</div>
+					</div>
+				</div>
+			</div>
+			<div class="section s8 s-ig ani">
+				<div class="title">
+					<img src="./images/s8/title.png" />
+				</div>
+				<div class="ig-wrap">
+					<div class="more-btn">
+						<a target="_blank" megais_ga="m_eventlogotee_ig_立即追蹤" href="https://www.instagram.com/levis_taiwan/">立即追蹤 >></a>
+					</div>
+					<div class="swiper-container s8-slider">
+						<div class="swiper-wrapper"></div>
+						<div megais_ga="m_eventlogotee_ig_nextBtn" class="swiper-button-next"></div>
+						<div megais_ga="m_eventlogotee_ig_prevBtn" class="swiper-button-prev"></div>
 					</div>
 				</div>
 			</div>
