--- a/src/m/index.html
+++ b/src/m/index.html
@@ -4,11 +4,11 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=640, user-scalable=no">
-	<meta name="title" content="LEVI'S® 秋冬全新女裝 2 Way 丹寧潮搭" />
-	<meta name="description" content="#摩登捲折 #窄腳積褲 錐形窄管 x IG大熱Logo衛衣" />
-	<meta name="keywords" content="LEVIS,Taper,丹寧,穿搭,牛仔褲,窄管,AB褲,512,502" />
+	<meta name="title" content="LEVI'S® 秋冬全新女裝 露踝丹寧新概念" />
+	<meta name="description" content="#抽鬚 #不收邊 緊身窄管 x 摩登Logo衛衣" />
+	<meta name="keywords" content="LEVIS,Skinny,丹寧,穿搭,牛仔褲,高腰,復古,721,720" />
 	<link type="text/css" href="https://www.levi.com.tw/images/ico/icon.ico" rel="shortcut icon" />
-	<title>LEVI'S® 秋冬全新女裝 2 Way 丹寧潮搭</title>
+	<title>LEVI'S® 秋冬全新女裝 露踝丹寧新概念</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.2.0/css/swiper.min.css">
 	<link rel="stylesheet" href="https://rawgit.com/utatti/perfect-scrollbar/master/css/perfect-scrollbar.css">
 	<link rel="stylesheet" href="/m/css/hamburgers.css">
@@ -21,6 +21,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.2.0/js/swiper.min.js"></script>
 	<script src="https://rawgit.com/utatti/perfect-scrollbar/master/dist/perfect-scrollbar.js"></script>
+	<script src="/m/js/lib/jquery.easing.js"></script>
 	<script src="/m/js/lib/fastclick.js"></script>
 	<script src="/m/js/fun.js"></script>
 	<script src="/m/js/tracking.js"></script>
@@ -32,9 +33,9 @@
 	<script src="./js/index.js"></script>
 
 	<!-- START - Facebook Open Graph Tags -->
-	<meta property="og:url" content="http://levi.com.tw/2018fw_women_collection/">
-	<meta property="og:title" content="LEVI'S® 秋冬全新女裝 2 Way 丹寧潮搭">
-	<meta property="og:description" content="#摩登捲折 #窄腳積褲 錐形窄管 x IG大熱Logo衛衣">
+	<meta property="og:url" content="http://levi.com.tw/!!levis_demo02/2018fw_women_collection/">
+	<meta property="og:title" content="LEVI'S® 秋冬全新女裝 露踝丹寧新概念">
+	<meta property="og:description" content="">
 	<meta property="og:image" content="https://www.levi.com.tw/!!levis_demo02/2018fw_women_collection/images/fb.jpg">
 	<!-- END - Facebook Open Graph Tags -->
 
@@ -81,7 +82,7 @@
 		<div class="container">
 			<div class="propaganda-box">
 				<div class="propaganda">
-					<a href="javascript:;">
+					<a target="_blank" href="http://bit.ly/2olwVSj">
 						<img src="./images/propaganda.png" alt="" />
 					</a>
 				</div>
@@ -101,7 +102,7 @@
 				<div class="cont ani">
 					<img src="./images/s2/pic.png" alt="" />
 					<div class="video">
-						<iframe width="326" height="204" src="https://www.youtube.com/embed/IfMvE1b9XGM?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+						<iframe width="326" height="204" src="https://www.youtube.com/embed/WUdzrj8W4P0?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 					</div>
 				</div>
 			</div>
@@ -115,11 +116,11 @@
 						<a target="_blank" href="https://www.levi.com.tw/fitguide.html#women
 						"></a>
 					</div>
-					<div class="roll-btn">
-						<a href="javascript:;"></a>
+					<div class="roll-btn-box">
+						<div class="roll-btn"></div>
 					</div>
-					<div class="stack-btn">
-						<a href="javascript:;"></a>
+					<div class="stack-btn-box">
+						<div class="stack-btn"></div>
 					</div>
 					<div class="swiper-container s3-slider">
 						<div class="swiper-wrapper">
@@ -258,6 +259,22 @@
 								</div>
 							</div>
 						</div>
+					</div>
+				</div>
+			</div>
+			<div class="section s8 s-ig ani">
+				<div class="title">
+					<img src="./images/s8/title.png" />
+					<a target="_blank" href="https://www.instagram.com/explore/tags/liveinlevis/" class="liveInLevis"></a>
+				</div>
+				<div class="ig-wrap">
+					<div class="more-btn">
+						<a target="_blank" megais_ga="m_eventlogotee_ig_立即追蹤" href="https://www.instagram.com/levis_taiwan/">立即追蹤 >></a>
+					</div>
+					<div class="swiper-container s8-slider">
+						<div class="swiper-wrapper"></div>
+						<div megais_ga="m_eventlogotee_ig_nextBtn" class="swiper-button-next"></div>
+						<div megais_ga="m_eventlogotee_ig_prevBtn" class="swiper-button-prev"></div>
 					</div>
 				</div>
 			</div>
